1) when a nzb-file is added via web-interface or via remote call the file is now put into incoming nzb-directory (option "NzbDir") and then scanned; this has two advantages over the old behavior when the file was parsed directly in memory: the file serves as a backup for troubleshootings and the file is processed by nzbprocess-script (if defined in option "NzbProcess") making the pre-processing much easier; 2) new env-var parameters are passed to NzbProcess-script: NZBNP_NZBNAME, NZBNP_CATEGORY, NZBNP_PRIORITY, NZBNP_TOP, NZBNP_PAUSED; 3) new commands for use in NzbProcess-scripts: "[NZB] TOP=1" to add nzb to the top of queue and "[NZB] PAUSED=1" to add nzb-file in paused state
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@711 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -314,21 +314,32 @@ NzbDirFileAge=60
 # save the second file under the same filename as the first one.
 MergeNzb=no
 
-# Set path to program, that must be executed before any file in incoming
-# directory (option <NzbDir>) is processed.
+# Set path to program, that must be executed before a nzb-file is added
+# to queue.
+#
+# This program is called each time a new file is found in incoming
+# directory (option <NzbDir>) or a file is received via RPC (web-interface,
+# command "nzbget --append", etc.).
 #
 # Example: ~/nzbprocess.sh.
 #
 # That program can unpack archives which were put in incoming directory, make
-# filename cleanup, assign category and post-processing parameters to nzb-file
-# or do something else.
+# filename cleanup, change nzb-name, category, priority and post-processing
+# parameters of the nzb-file or do other things.
 #
 # INFO FOR DEVELOPERS:
 # NZBGet passes following arguments to nzbprocess-program as environment
 # variables:
 #  NZBNP_DIRECTORY - path to directory, where file is located. It is a directory
 #                    specified by the option <NzbDir> or a subdirectory;
-#  NZBNP_FILENAME  - name of file to be processed.
+#  NZBNP_FILENAME  - name of file to be processed;
+#  NZBNP_NZBNAME   - nzb-name (without path but with extension);
+#  NZBNP_CATEGORY  - category of nzb-file;
+#  NZBNP_PRIORITY  - priority of nzb-file;
+#  NZBNP_TOP  	   - flag indicating that the file will be added to the top
+#                    of queue: 0 or 1;
+#  NZBNP_PAUSED	   - flag indicating that the file will be added as
+#                    paused: 0 or 1.
 #
 # In addition to these arguments NZBGet passes all
 # nzbget.conf-options to nzbprocess-program as environment variables. These
@@ -338,14 +349,18 @@ MergeNzb=no
 # "SERVER1_HOST". For options with predefined possible values (yes/no, etc.)
 # the values are passed always in lower case.
 #
-# The nzbprocess-script can assign category, priority and post-processing
-# parameters to the current nzb-file by printing special messages into
-# standard output (which is processed by NZBGet).
+# The nzbprocess-script can change nzb-name, category, priority,
+# post-processing parameters and top-/paused-flags of the nzb-file
+# by printing special messages into standard output (which is processed
+# by NZBGet).
 #
-# To assign category use following syntax:
+# To change nzb-name use following syntax:
+#   echo "[NZB] NZBNAME=my download";
+#
+# To change category:
 #   echo "[NZB] CATEGORY=my category";
 #
-# To assign priority:
+# To change priority:
 #   echo "[NZB] PRIORITY=signed_integer_value";
 #
 # for example: to set priority higher than normal:
@@ -354,12 +369,26 @@ MergeNzb=no
 # another example: use a negative value for "lower than normal" priority:
 #   echo "[NZB] PRIORITY=-100";
 #
+# Although priority can be any integer value, the web-interface operates
+# with five predefined priorities:
+# -100 - very low priority;
+# -50  - low priority;
+# 0    - normal priority (default);
+# 50   - high priority;
+# 100  - very high priority.
+#
 # To assign post-processing parameters:
 #   echo "[NZB] NZBPR_myvar=my value";
 #
 # The prefix "NZBPR_" will be removed. In this example a post-processing
 # parameter with name "myvar" and value "my value" will be associated
 # with nzb-file.
+#
+# To change top-flag (nzb-file will be added to the top of queue):
+#   echo "[NZB] TOP=1";
+#
+# To change paused-flag (nzb-file will be added in paused state):
+#   echo "[NZB] PAUSED=1";
 #
 # The nzbprocess-script can delete processed file, rename it or move somewhere.
 # After the calling of the script the file will be either added to queue
@@ -372,14 +401,15 @@ MergeNzb=no
 # NzbProcess-script before adding to queue. This feature allows
 # NzbProcess-script to prevent the scanning of nzb-files extracted from
 # archives, if they were already processed by the script.
+#
+# NOTE: Files added via RPC calls in particular from web-interface are
+# saved into incoming nzb-directory and then processed by the script.
 NzbProcess=
 
 # Set path to program, that must be executed after a nzb-file is added
 # to queue.
 #
-# This program is called each time a new nzb-file is added to queue: from
-# nzb incoming directory, via command line call "nzbget -A filename.nzb",
-# via RPC-method "append" or from web-interface.
+# This program is called each time a new nzb-file is added to queue.
 #
 # Example: ~/nzbaddedprocess.sh.
 #
