improved configure-script: defining of symbol "FILE_OFFSET_BITS=64", required on some systems, is not necessary anymore
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@715 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -79,9 +79,6 @@
 /* Define to 1 if spinlocks are supported */
 #undef HAVE_SPINLOCK
 
-/* Define to 1 if stat64 is supported */
-#undef HAVE_STAT64
-
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
@@ -138,3 +135,9 @@
 
 /* Version number of package */
 #undef VERSION
+
+/* Number of bits in a file offset, on hosts where this is settable. */
+#undef _FILE_OFFSET_BITS
+
+/* Define for large files, on AIX-style hosts. */
+#undef _LARGE_FILES
