--- a/configure.ac
+++ b/configure.ac
@@ -56,10 +56,9 @@ AC_CHECK_FUNC(getopt_long,
 
 
 dnl
-dnl stat64
+dnl use 64-Bits for file sizes
 dnl
-AC_CHECK_FUNC(stat64,
-	[AC_DEFINE([HAVE_STAT64], 1, [Define to 1 if stat64 is supported])],)
+AC_SYS_LARGEFILE
 
 
 dnl
