--- a/nzbget.conf
+++ b/nzbget.conf
@@ -658,6 +658,26 @@ DeleteCleanupDisk=no
 # that can be achieved with the option <ParCleanupQueue>.
 KeepHistory=7
 
+# Keep the history of outdated feed items (days).
+#
+# After fetching of an RSS feed the information about included items (nzb-files)
+# is saved to disk. This allows to detect new items on next fetch. Feed 
+# providers update RSS feeds constantly. Since the feed length is limited
+# (usually 100 items or less) the old items get pushed away by new
+# ones. When an item is not present in the feed anymore it's not necessary
+# to keep the information about this item on the disk.
+#
+# If option is set to "0", the outdated items are deleted from history
+# immediately.
+#
+# Otherwise the items are held in the history for defined number of
+# days. Keeping of items for few days helps in situations when feed provider
+# has technical issues and may response with empty feeds (or with missing
+# items). When the technical issue is fixed the items may reappear in the
+# feed causing the program to redownload items if they were not found in
+# the feed history. 
+FeedHistory=7
+
 # Maximum number of simultaneous connections for nzb URL downloads (0-999).
 #
 # When NZB-files are added to queue via URL, the program downloads them
@@ -694,6 +714,45 @@ Category1.DefScript=
 Category2.Name=Series
 Category3.Name=Music
 Category4.Name=Software
+
+
+##############################################################################
+### RSS FEEDS                                                              ###
+
+# Name of RSS Feed.
+#
+# The name is used in logging and can be any string.
+#Feed1.Name=my feed
+
+# Address (URL) of RSS Feed.
+#
+# Example: https://myindexer.com/api?apikey=3544646bfd1c535a9654645609800901&t=search&q=game.
+#
+# NOTE: When the feed is fetched for the very first time all existing
+# items are ignored. The items found on subsequentional fetches are processed. 
+#Feed1.URL=
+
+# How often to check for new items (minutes).
+#
+# Value "0" disables the automatic check of this feed.
+#Feed1.Interval=15
+
+# Add nzb-files as paused (yes, no).
+#Feed1.PauseNzb=no
+
+# Category for added nzb-files.
+#
+# NOTE: Feed providers may include category name within response when nzb-file
+# is downloaded. If you want to use the providers category leave the option empty.
+#Feed1.Category=
+
+# Priority for added nzb-files (number).
+#
+# Priority can be any integer value. The web-interface however operates
+# with only five predefined priorities: -100 (very low priority), -50
+# (low priority), 0 (normal priority, default), 50 (high priority),
+# 100 (very high priority).
+#Feed1.Priority=0
 
 
 ##############################################################################
