added new option "CategoryX.Aliases" to configure category name matching with nzb-sites; especially useful with rss feeds
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@732 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -711,6 +711,18 @@ Category1.DestDir=
 # For more information see global option <DefScript>.
 Category1.DefScript=
 
+# List of aliases.
+#
+# When a nzb-file is added from URL, RSS or RPC the category name
+# is usually supplied by nzb-site or by application accessing
+# NZBGet. Using Aliases you can match their categories with your owns.
+#
+# Separate aliases with commas or semicolons. Use wildcard-characters
+# * and ? for pattern matching.
+#
+# Example: TV - HD, TV - SD, TV*
+Category1.Aliases=
+
 Category2.Name=Series
 Category3.Name=Music
 Category4.Name=Software
