news servers can now be temporarily disabled via speed limit dialog without reloading of the program; new option "ServerX.Active" to disable servers via settings; new option "ServerX.Name" to use for logging and in UI
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@743 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -112,6 +112,17 @@ ConfigTemplate=
 # change the name of Server3 to Server2. Otherwise it will not be properly
 # read from the config file. Server number doesn't affect its priority (level).
 
+# Use this news server (yes, no).
+#
+# Set to "no" to temporary disable the server.
+Server1.Active=yes
+
+# Name of news server.
+#
+# The name is used in UI and for logging. It can be any string, you
+# may even leave it empty.
+Server1.Name=
+
 # Level (priority) of news server (0-99).
 #
 # The servers are ordered by their level. NZBGet first tries to download
@@ -733,7 +744,7 @@ Category4.Name=Software
 
 # Name of RSS Feed.
 #
-# The name is used in logging and can be any string.
+# The name is used in UI and for logging. It can be any string.
 #Feed1.Name=my feed
 
 # Address (URL) of RSS Feed.
