changed the way how option "Unpack" works: instead of enabling/disabling the unpacker as a whole, it now defines the initial value of post-processing parameter "Unpack" for nzb-file when it is added to queue; this makes it now possible to disable Unpack globally but still enable it for selected nzb-files; new option "CategoryX.Unpack" to set unpack on a per category basis
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@746 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -717,6 +717,11 @@ Category1.Name=Movies
 # destination directory.
 Category1.DestDir=
 
+# Unpack downloaded nzb-files (yes, no).
+#
+# For more information see global option <Unpack>.
+Category1.Unpack=yes
+
 # Default list of post-processing scripts.
 #
 # For more information see global option <DefScript>.
@@ -1058,12 +1063,19 @@ ExtCleanupDisk=.par2, .sfv, _brokenlog.txt
 
 # Unpack downloaded nzb-files (yes, no).
 #
+# Each download (nzb-file) has a post-processing parameter "Unpack". The option
+# <Unpack> is the default value assigned to this pp-parameter of the download
+# when it is added to queue.
+#
+# When nzb-file is added to queue it can have a category assigned to it. In this
+# case the option <CategoryX.Unpack> overrides the global option <Unpack>.
+#
 # If the download is damaged and could not be repaired using par-files
 # the unpacking is not performed.
 #
-# If the option <ParCheck> is disabled the program will try to unpack
+# If the option <ParCheck> is set to "Auto" the program tries to unpack
 # downloaded files first. If the unpacking fails the par-check/repair
-# is performed and the unpack will be executed again.
+# is performed and the unpack is executed again.
 Unpack=yes
 
 # Pause download queue during unpack (yes, no).
