--- a/nzbget.conf
+++ b/nzbget.conf
@@ -760,6 +760,62 @@ Category4.Name=Software
 # items are ignored. The items found on subsequentional fetches are processed. 
 #Feed1.URL=
 
+# Filter rules for items.
+#
+# Use filter to ignore unwanted items in the feed. In its simplest version
+# the filter is a space separated list of words which must be present in
+# the item title.
+#
+# Example: linux debian dvd.
+#
+# MORE INFO:
+# Filter string is similar to used in search engines. It consists of
+# search rules separated with spaces. Every rule is checked for a feed
+# item and if they all succeed the feed item is considered good. If
+# any of the rules fails the feed item is ignored (rejected).
+#
+# Definition of rules:
+#  [+|-][field:][command]param
+#
+#  +       - declares a positive rule. Rules are positive by default,
+#            the "+" can be omitted;
+#  -       - declares a negative rule. If the rule succeed the feed
+#            item is ignored;
+#  field   - field to which apply the rule. Available fields: title,
+#            filename, category, link, size, age, date. If
+#            not specified the default field "title" is used;
+#  command - one of the special characters defining how to interpret the
+#            parameter (followed after the command):
+#            @  - search for word "param" This is default command,
+#                 the "@" can be omitted;
+#            " (quotation mark) - search for substring "param". The parameter
+#                  must end with quotation mark as well;
+#            $  - "param" defines a regular expression (using POSIX Extended
+#                 Regular Expressions syntax);
+#            <  - less than;
+#            <= - equal or less than;
+#            >  - greater than;
+#            >= - equal or greater than;
+#  param   - parameter for command.
+#
+# Commands @, " and $ are for use with text fields (title, filename, category,
+# link). Commands <, <=, > and >= are for use with numeric and date
+# fields (size, age, date). Commands @ and " support wildcard
+# characters * and ?. Command @ assumes following characters being word
+# separators: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
+#
+# NOTE: This development version supports only commands @ (search for word) and
+# " (search for substring). Other commands are not implemented yet.
+#
+# Examples (the trailing ; or . is not part of filter):
+# 1) s01* -category:anime;
+# 2) game of thrones "WEB-DL";
+# 3) "game?of?thrones" "WEB-DL".
+#
+# NOTE: For more info and examples see 
+# http://nzbget.sourceforge.net/RSS#Filter.
+#Feed1.Filter=
+
 # How often to check for new items (minutes).
 #
 # Value "0" disables the automatic check of this feed.
