fully implemented feed filters
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@752 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -769,6 +769,9 @@ Category4.Name=Software
 # Example: linux debian dvd.
 #
 # MORE INFO:
+# NOTE: This is a short documentation, for more information visit
+# http://nzbget.sourceforge.net/RSS.
+#
 # Filter string is similar to used in search engines. It consists of
 # search rules separated with spaces. Every rule is checked for a feed
 # item and if they all succeed the feed item is considered good. If
@@ -782,8 +785,8 @@ Category4.Name=Software
 #  -       - declares a negative rule. If the rule succeed the feed
 #            item is ignored;
 #  field   - field to which apply the rule. Available fields: title,
-#            filename, category, link, size, age, date. If
-#            not specified the default field "title" is used;
+#            filename, category, link, size, age. If not specified
+#            the default field "title" is used;
 #  command - one of the special characters defining how to interpret the
 #            parameter (followed after the command):
 #            @  - search for word "param" This is default command,
@@ -799,21 +802,17 @@ Category4.Name=Software
 #  param   - parameter for command.
 #
 # Commands @, " and $ are for use with text fields (title, filename, category,
-# link). Commands <, <=, > and >= are for use with numeric and date
-# fields (size, age, date). Commands @ and " support wildcard
-# characters * and ?. Command @ assumes following characters being word
-# separators: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
-#
-# NOTE: This development version supports only commands @ (search for word) and
-# " (search for substring). Other commands are not implemented yet.
+# link). Commands <, <=, > and >= are for use with numeric fields (size,
+# age). Commands @ and " support wildcard characters * and ?. Command @ assumes 
+# following characters being word separators: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
 #
 # Examples (the trailing ; or . is not part of filter):
 # 1) s01* -category:anime;
 # 2) game of thrones "WEB-DL";
-# 3) "game?of?thrones" "WEB-DL".
+# 3) "game?of?thrones" "WEB-DL" size:<1.8GB age:>2h.
 #
-# NOTE: For more info and examples see 
-# http://nzbget.sourceforge.net/RSS#Filter.
+# NOTE: This is a short documentation, for more information visit
+# http://nzbget.sourceforge.net/RSS.
 #Feed1.Filter=
 
 # How often to check for new items (minutes).
