combined rss filter commands @ and " into one command to make filters more intuitive
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@758 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -773,26 +773,24 @@ Category4.Name=Software
 # http://nzbget.sourceforge.net/RSS.
 #
 # Filter string is similar to used in search engines. It consists of
-# search rules separated with spaces. Every rule is checked for a feed
+# search terms separated with spaces. Every term is checked for a feed
 # item and if they all succeed the feed item is considered good. If
-# any of the rules fails the feed item is ignored (rejected).
+# any of the terms fails the feed item is ignored (rejected).
 #
-# Definition of rules:
+# Definition of a term:
 #  [+|-][field:][command]param
 #
-#  +       - declares a positive rule. Rules are positive by default,
+#  +       - declares a positive term. Terms are positive by default,
 #            the "+" can be omitted;
-#  -       - declares a negative rule. If the rule succeed the feed
+#  -       - declares a negative term. If the term succeed the feed
 #            item is ignored;
-#  field   - field to which apply the rule. Available fields: title,
+#  field   - field to which apply the term. Available fields: title,
 #            filename, category, link, size, age. If not specified
 #            the default field "title" is used;
-#  command - one of the special characters defining how to interpret the
+#  command - a special character defining how to interpret the
 #            parameter (followed after the command):
-#            @  - search for word "param" This is default command,
+#            @  - search for string "param". This is default command,
 #                 the "@" can be omitted;
-#            " (quotation mark) - search for substring "param". The parameter
-#                  must end with quotation mark as well;
 #            $  - "param" defines a regular expression (using POSIX Extended
 #                 Regular Expressions syntax);
 #            <  - less than;
@@ -801,15 +799,21 @@ Category4.Name=Software
 #            >= - equal or greater than;
 #  param   - parameter for command.
 #
-# Commands @, " and $ are for use with text fields (title, filename, category,
+# Commands @ and $ are for use with text fields (title, filename, category,
 # link). Commands <, <=, > and >= are for use with numeric fields (size,
-# age). Commands @ and " support wildcard characters * and ?. Command @ assumes 
-# following characters being word separators: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
+# age).
+#
+# Command @ supports wildcard characters * and ?. If the search pattern
+# defined in "param" starts and ends with * or if it contains word
+# separator characters (except * and ?) a search on the whole field is
+# performed. Otherwise a word-search is made: the field content is
+# separated into words and then each word is checked against the
+# pattern. Word separators are: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
 #
 # Examples (the trailing ; or . is not part of filter):
 # 1) s01* -category:anime;
-# 2) game of thrones "WEB-DL";
-# 3) "game?of?thrones" "WEB-DL" size:<1.8GB age:>2h.
+# 2) game of thrones WEB-DL;
+# 3) *game?of?thrones* WEB-DL size:<1.8GB age:>2h.
 #
 # NOTE: This is a short documentation, for more information visit
 # http://nzbget.sourceforge.net/RSS.
