options "DeleteCleanupDisk" and "NzbCleanupDisk" are now active by default (in the example config file)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@759 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -653,7 +653,7 @@ DiskSpace=250
 # <ParCleanupQueue> is disabled or if the program was interrupted during
 # parcheck and later restarted without reloading of post queue (option
 # <ReloadPostQueue> disabled).
-DeleteCleanupDisk=no
+DeleteCleanupDisk=yes
 
 # Keep the history of downloaded nzb-files (days).
 #
@@ -1105,7 +1105,7 @@ ParCleanupQueue=yes
 #
 # Enable this option for automatic deletion of nzb-file from incoming directory
 # after successful check/repair.
-NzbCleanupDisk=no
+NzbCleanupDisk=yes
 
 # Files to delete after successful check/repair.
 #
