updated VC project file
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@761 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.vcproj
+++ b/nzbget.vcproj
@@ -316,6 +316,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\FeedFilter.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\FeedFilter.h"
+			>
+		</File>
+		<File
 			RelativePath=".\Frontend.cpp"
 			>
 		</File>
