pp-scripts which move files can now inform the program about new location by printing text "[NZB] FINALDIR=/path/to/files"; the final path is then shown in history dialog instead of download path
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@765 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1240,6 +1240,11 @@ SevenZipCmd=7z
 # "SERVER1_HOST". For options with predefined possible values (yes/no, etc.)
 # the values are passed always in lower case.
 #
+# If the script moves files it can inform the program about new location
+# by printing special message into standard output (which is processed
+# by NZBGet):
+#   echo "[NZB] FINALDIR=/path/to/moved/files";
+#
 # Return value: NZBGet processes the exit code returned by the script:
 #  93 - post-process successful (status = SUCCESS);
 #  94 - post-process failed (status = FAILURE);
