1) added multiline filters for RSS feeds; new dialog to build filters in web-interface; 2) refactor: the length of configuration option values is now unlimited (previously was limited to 1000 characters; unlimited needed for long feed filters)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@767 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -772,10 +772,50 @@ Category4.Name=Software
 # NOTE: This is a short documentation, for more information visit
 # http://nzbget.sourceforge.net/RSS.
 #
-# Filter string is similar to used in search engines. It consists of
+# Feed filter consists of rules - one rule per line. Each rule defines
+# a search string and a command, which must be performed if the search
+# string matches. There are five kinds of rule-commands: Accept,
+# Reject, Require, Options, Comment.
+#
+# NOTE: Since options in the configuration file can not span multiple
+# lines, the lines (rules) must be separated with %-character (percent).
+#
+# Definition of a rule:
+#  [A:|A(options):|R:|Q:|O(options):|#] search-string
+#
+#  A - declares Accept-rule. Rules are accept-rules by default, the
+#      "A:" can be imitted. If the feed item matches to the rule the
+#      item is considered good and no further rules are checked.
+#  R - declares Reject-rule. If the feed item matches to the rule the
+#      item is considered bad and no further rules are checked.
+#  Q - declares Require-rule. If the feed item DOES NOT match to the rule
+#      the item is considered bad and no further rules are checked.
+#  O - declares Options-rule. If the feed item matches to the rule the
+#      options declared in the rule are set for the item. The item is
+#      neither accepted nor rejected via this rule but can be accepted
+#      later by one of Accept-rules. In this case the item will have its
+#      options already set (unless the Accept-rule overrides them).
+#  # - lines starting with # are considered comments and are ignored. You
+#      can use comments to explain complex rules or to temporary disable
+#      rules for debugging.
+#
+# Options allow to set category, priority and a flag to add nzb-file in
+# paused state.
+#
+# Definition of options:
+#  [category,] [priority,] [paused|unpaused]
+#
+#  category - category name which must not be "paused", "unpaused" and
+#              must not start with a digit or plus/minus;
+#   priority - signed integer number;
+#   paused   - add nzb in paused state;
+#   unpaused - add nzb in unpaused state.
+#
+# Rule-options override values set in feed-options.
+#
+# The search-string is similar to used in search engines. It consists of
 # search terms separated with spaces. Every term is checked for a feed
-# item and if they all succeed the feed item is considered good. If
-# any of the terms fails the feed item is ignored (rejected).
+# item and if they all succeed the rule is considered matching.
 #
 # Definition of a term:
 #  [+|-][field:][command]param
@@ -803,17 +843,22 @@ Category4.Name=Software
 # link). Commands <, <=, > and >= are for use with numeric fields (size,
 # age).
 #
-# Command @ supports wildcard characters * and ?. If the search pattern
-# defined in "param" starts and ends with * or if it contains word
-# separator characters (except * and ?) a search on the whole field is
-# performed. Otherwise a word-search is made: the field content is
-# separated into words and then each word is checked against the
-# pattern. Word separators are: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
+# Text search (Command @) supports wildcard characters * and ?.
+# Text search is by default performed against words (word-search mode): the
+# field content is separated into words and then each word is checked
+# against pattern. If the search pattern starts and ends with * (star)
+# the search is performed against the whole field content
+# (substring-search mode). If the search pattern contains word separator
+# characters (except * and ?) the search is performed on the whole
+# field (the word-search would be obviously never successful in this
+# case). Word separators are: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
 #
 # Examples (the trailing ; or . is not part of filter):
-# 1) s01* -category:anime;
-# 2) game of thrones WEB-DL;
-# 3) *game?of?thrones* WEB-DL size:<1.8GB age:>2h.
+# 1) A: s01* -category:anime;
+# 2) my show WEB-DL;
+# 3) *my?show* WEB-DL size:<1.8GB age:>2h;
+# 4) R: size:>9GB;
+# 5) Q: HDTV.
 #
 # NOTE: This is a short documentation, for more information visit
 # http://nzbget.sourceforge.net/RSS.
