added support for fields "rating" and "genre" in rss filters
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@773 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -853,6 +853,14 @@ Category4.Name=Software
 # field (the word-search would be obviously never successful in this
 # case). Word separators are: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~.
 #
+# Field "size" can have suffixes "K" or "KB" for kilobytes, "M" or "MB"
+# for megabytes and "G" or "GB" for gigabytes. Field "age" can have
+# suffixes "m" for minutes, "h" for hours and "d" for days. If suffix
+# is not specified default is days. Field "rating" can be used with
+# integer or floating point parameter. Integer parameter is interpreted
+# as value of rating between 0 and 100. A floating point value is used
+# as rating between 0.0 and 10.0.
+#
 # Examples (the trailing ; or . is not part of filter):
 # 1) A: s01* -category:anime;
 # 2) my show WEB-DL;
