added fields "rageid", "season", "episode" and command "=" to rss filters
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@776 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -824,8 +824,7 @@ Category4.Name=Software
 #            the "+" can be omitted;
 #  -       - declares a negative term. If the term succeed the feed
 #            item is ignored;
-#  field   - field to which apply the term. Available fields: title,
-#            filename, category, link, size, age. If not specified
+#  field   - field to which apply the term. If not specified
 #            the default field "title" is used;
 #  command - a special character defining how to interpret the
 #            parameter (followed after the command):
@@ -833,6 +832,7 @@ Category4.Name=Software
 #                 the "@" can be omitted;
 #            $  - "param" defines a regular expression (using POSIX Extended
 #                 Regular Expressions syntax);
+#            =  - equal;
 #            <  - less than;
 #            <= - equal or less than;
 #            >  - greater than;
@@ -840,8 +840,11 @@ Category4.Name=Software
 #  param   - parameter for command.
 #
 # Commands @ and $ are for use with text fields (title, filename, category,
-# link). Commands <, <=, > and >= are for use with numeric fields (size,
-# age).
+# link, genre). Commands =, <, <=, > and >= are for use with numeric
+# fields (size, age, rating, rageid, season, episode).
+#
+# Only fields title, filename and age are always present. The availability of
+# other fields depend on rss feed provider.
 #
 # Text search (Command @) supports wildcard characters * and ?.
 # Text search is by default performed against words (word-search mode): the
