added download health monitoring: health indicates download status, whether the file is damaged and how much; new option "HealthCheck" to define what to do with bad downloads (pause, delete, none); par-check is now automatically started for downloads having health below 100%, this works independently of unpack (even if unpack is disabled); for downloads having health less than critical health no par-check is performed (it would fail); new fields "Health" and "CriticalHealth" are returned by RPC-Method "listgroups"; new fields "Health", "CriticalHealth", "Deleted" and "HealthDeleted" are returned by RPC-Method "history"; new parameters "NZBPP_HEALTH" and "NZBPP_CRITICALHEALTH" are passed to pp-scripts; manually deleted downloads now have history status "deleted" (instead of "unknown")
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@779 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1080,8 +1080,8 @@ ParCheck=auto
 # may take too much resources and time on a slow computers.
 ParRepair=yes
 
-# What files should be scanned during par-verification (limited,
-# full, auto).
+# What files should be scanned during par-verification (auto, limited,
+# full).
 #
 #  Limited - scan only files belonging to the par-set;
 #  Full    - scan all files in the directory. This helps if the
@@ -1090,12 +1090,20 @@ ParRepair=yes
 #            detects missing files, it scans other files in the 
 #            directory until all required files are found.
 #
-# NOTE: for par-check/repair NZBGet uses library libpar2. The last and
-# widely used version 0.2 of the library has few bugs, sometimes causing
+# NOTE: for par-check/repair NZBGet uses library libpar2. The widely
+# used version 0.2 of the library has few bugs, sometimes causing
 # a crash of the program. This is especially true when using "full" or
 # "auto" par-scan. NZBGet is supplied with patches addressing these
 # issues. Please apply the patches to libpar2 and recompile it.
 ParScan=auto
+
+# What to do if download health goes down below critical health (pause,
+# delete, none).
+#
+#  Pause  - pause nzb-file;
+#  Delete - delete nzb-file from queue;
+#  None   - do nothing (continue download).
+HealthCheck=pause
 
 # Use only par2-files with matching names (yes, no).
 #
@@ -1265,6 +1273,17 @@ SevenZipCmd=7z
 #  NZBPP_NZBFILENAME  - name of processed nzb-file. It includes file extension and also
 #                       may include full path;
 #  NZBPP_CATEGORY     - category assigned to nzb-file (can be empty string);
+#  NZBPP_HEALTH       - download health: an integer value in the range
+#                       from 0 (all articles failed) to 1000 (all articles
+#                       successfully downloaded);
+#  NZBPP_CRITICALHEALTH - critical health for this nzb-file: an integer 
+#                       value in the range 0-1000. The critical health 
+#                       is calculated based on number and size of
+#                       par-files. If nzb-file doesn't have any par-files
+#                       the critical health is 1000 (100.0%). If a half
+#                       of nzb-file were par-files its critical health
+#                       would be 0. If NZBPP_HEALTH goes down below
+#                       NZBPP_CRITICALHEALTH the download becomes unrepairable;
 #  NZBPP_PARSTATUS    - result of par-check:
 #                       0 = not checked: par-check is disabled or nzb-file does
 #                           not contain any par-files;
@@ -1274,7 +1293,7 @@ SevenZipCmd=7z
 #                       4 = par-check needed but skipped (option ParCheck=manual);
 #  NZBPP_UNPACKSTATUS - result of unpack:
 #                       0 = unpack is disabled or was skipped due to nzb-file
-#                           properties or due to errors during par-check;
+#                           parameters or due to errors during par-check;
 #                       1 = unpack failed;
 #                       2 = unpack successful.
 #
